<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RQHelper</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="rq3_skills">RQ3 Skills</string>
    <string name="rq6_skills">RQ6 Skills</string>
    <string name="rq3_title">RQ3 Skill levels</string>
    <string name="skill_per">Skill %</string>
    <string name="critical">Critical</string>
    <string name="special">Special</string>
    <string name="unset_range">"  -  "</string>
    <string name="success">Success</string>
    <string name="failure">Failure</string>
    <string name="fumble">Fumble</string>
    <string name="rq6_title">RQ6 Skill Levels</string>
    <string name="new_skill">Modified</string>
    <string name="blank">" "</string>
    <string name="difficulty">Difficulty level</string>
    <string-array name="rq6_difficulties">
        <item >Automatic</item>
        <item >Very Easu</item>
        <item >Very Easy</item>
        <item >Easy</item>
        <item >Standard</item>
        <item >Hard</item>
        <item >Formidable</item>
        <item >Herculean</item>
        <item >Hopeless</item>
    </string-array>

</resources>