<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="4"
            android:fontFamily="32sp"
            android:text="@string/rq6_title"
            android:textSize="32sp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skill_per"
            android:textAppearance="?android:attr/textAppearanceLarge" 
        	android:layout_margin="2dp" />

        <EditText
            android:id="@+id/rq6_skill_per"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:ems="3"
            android:inputType="number" >

            <requestFocus />
        </EditText>

        <Spinner
            android:id="@+id/rq6_difficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:prompt="@string/difficulty" 
            android:entries="@array/rq6_difficulties" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_skill"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/rq6_modskill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blank"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/critical"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/rq6_critical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unset_range"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/success"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/rq6_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unset_range"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/failure"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/rq6_failure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unset_range"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fumble"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/rq6_fumble"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unset_range"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>
    
</TableLayout>