<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="32sp"
            android:text="@string/rq3_title"
            android:textSize="32sp" 
            android:layout_span="4"/>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skill_per"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/rq3_skill_per"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="3"
            android:inputType="number" >

            <requestFocus />
        </EditText>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/critical"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/rq3_crit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unset_range"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/special"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/rq3_spec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unset_range"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/success"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/rq3_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unset_range"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/failure"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/rq3_failure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unset_range"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fumble"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/rq3_fumble"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unset_range"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </TableRow>

</TableLayout>